# mello

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  TESTING.md  render.yaml  voice-test-client-prod.sh
.cargo/: config.toml.example
.githooks/: pre-commit  pre-push
backend/: .env.example  Dockerfile  docker-compose.yml
client/: Cargo.toml  build.rs
client/assets/: games.json
client/assets/icons/: mello.icns
client/macos/: Info.plist  entitlements.plist  release.entitlements
client/src/: app_context.rs  autolaunch.rs  avatar.rs  chat_ui.rs  converters.rs  dcomp_presenter.rs  deep_link.rs  diag_capture.rs  feed_layout.rs  foreground_monitor.rs  gif_animator.rs  hud_manager.rs  hud_state_builder.rs  image_cache.rs  ipc.rs  main.rs  native_stream_presenter.rs  notifications.rs  poll_loop.rs  settings.rs  snapshot_cache.rs  snapshot_loader.rs
client/src/callbacks/: auth.rs  chat.rs  clip.rs  crew.rs  crew_settings.rs  game.rs  mod.rs  onboarding.rs  settings.rs  streaming.rs  voice.rs
client/src/handlers/: auth.rs  chat.rs  clip.rs  crew.rs  game.rs  mod.rs  presence.rs  stats.rs  stream_cards.rs  streaming.rs  voice.rs
client/src/hud_overlay/: mod.rs  renderer.rs  window.rs
client/src/platform/: crash_handler.rs  hotkeys.rs  macos.rs  mod.rs  taskbar_toolbar.rs
client/src/updater/: mod.rs  startup_update.rs  updater.rs
client/ui/: main.slint  theme.slint  types.slint
client/ui/components/: avatar_card.slint  game_badge.slint
client/ui/panels/: active_streams_panel.slint  chat_panel.slint  control_bar.slint  crew_feed.slint  crew_panel.slint  crew_settings_modal.slint  debug_panel.slint  discover_panel.slint  force_update_dialog.slint  invite_share_modal.slint  join_crew_modal.slint  new_crew_modal.slint  onboarding.slint  session_preview_card.slint  settings_modal.slint  sign_in.slint  stream_source_picker.slint  stream_view.slint  update_banner.slint  voice_channel_view.slint  you_strip.slint
client/windows/: signing-metadata.json
designs/: avatar-cardflip.html  control-bar.html  (+14 more)
hud/: Cargo.toml  build.rs
hud/src/: ipc.rs  main.rs  mini_player.rs  mode.rs  protocol.rs
hud/src/overlay/: mod.rs  renderer.rs  window.rs
hud/ui/: mini_player.slint
libmello/: CMakeLists.txt  build.ps1  build.sh  vcpkg.json
libmello/cmake/webrtc-audio-processing/: CMakeLists.txt
libmello/include/: mello.h
libmello/src/: context.cpp  context.hpp  mello.cpp
libmello/src/audio/: audio_backend_coreaudio.cpp  audio_backend_ios.cpp  audio_backend_ios_stub.cpp  audio_backend_stub.cpp  audio_backend_wasapi.cpp  audio_capture.hpp  audio_pipeline.cpp  audio_pipeline.hpp  audio_playback.hpp  audio_session_ios.hpp  audio_session_ios.mm  audio_session_win.cpp  audio_session_win.hpp  capture_coreaudio.cpp  capture_coreaudio.hpp  capture_remoteio.cpp  capture_remoteio.hpp  capture_wasapi.cpp  capture_wasapi.hpp  clip_buffer.cpp  clip_buffer.hpp  clip_encoder.cpp  clip_encoder.hpp  clip_encoder_audiotoolbox.cpp  clip_encoder_ios_stub.cpp  clip_encoder_wmf.cpp  device_enumerator.hpp  device_enumerator_coreaudio.cpp  device_enumerator_ios_stub.cpp  device_enumerator_stub.cpp  device_enumerator_wasapi.cpp  echo_canceller.cpp  echo_canceller.hpp  jitter_buffer.cpp  jitter_buffer.hpp  mic_permission_ios.mm  mic_permission_macos.mm  mic_permission_stub.cpp  noise_suppressor.cpp  noise_suppressor.hpp  (+10 more)
libmello/src/transport/: peer_connection.cpp  peer_connection_impl.hpp
libmello/src/util/: log.hpp  ring_buffer.hpp
libmello/src/video/: capture_dxgi.cpp  capture_dxgi.hpp  capture_process.cpp  capture_process.hpp  capture_screencapturekit.hpp  capture_screencapturekit.mm  capture_source.hpp  capture_wgc.cpp  capture_wgc.hpp  color_converter.cpp  color_converter.hpp  cursor.cpp  cursor.hpp  decoder.hpp  decoder_amf.cpp  decoder_amf.hpp  decoder_d3d11va.cpp  decoder_d3d11va.hpp  decoder_dav1d.cpp  decoder_dav1d.hpp  decoder_factory.cpp  decoder_factory.hpp  decoder_nvdec.cpp  decoder_nvdec.hpp  decoder_openh264.cpp  decoder_openh264.hpp  decoder_videotoolbox.hpp  decoder_videotoolbox.mm  encoder.hpp  encoder_amf.cpp  encoder_amf.hpp  encoder_factory.cpp  encoder_factory.hpp  encoder_nvenc.cpp  encoder_nvenc.hpp  encoder_qsv.cpp  encoder_qsv.hpp  encoder_videotoolbox.hpp  encoder_videotoolbox.mm  graphics_device.cpp  (+18 more)
libmello/tests/: CMakeLists.txt  test_echo_canceller.cpp  test_jitter_buffer.cpp  test_noise_suppressor.cpp  test_opus_codec.cpp  test_vad.cpp  test_video_pipeline.cpp
libmello/vcpkg-overlays/usrsctp/: ios-no-route-socket.patch  ios-rfc-2292-define.patch  portfile.cmake  vcpkg.json
mello-core/: Cargo.toml
mello-core-ffi/: Cargo.toml  cbindgen.toml
mello-core-ffi/examples/: roundtrip.rs
mello-core-ffi/src/: lib.rs
mello-core/src/: auth_discord.rs  auth_google.rs  auth_steam.rs  auth_twitch.rs  chat.rs  client.rs  command.rs  config.rs  crew_events.rs  crew_state.rs  emoji.rs  error.rs  events.rs  game_db.rs  game_sensing.rs  game_state.rs  giphy.rs  lib.rs  oauth.rs  presence.rs  session.rs
mello-core/src/client/: auth.rs  chat.rs  clip.rs  connection.rs  crew.rs  diagnostics.rs  mod.rs  presence.rs  reconnect.rs  stream_ffi.rs  streaming.rs  voice.rs
mello-core/src/crew/: mod.rs
mello-core/src/nakama/: client.rs  mod.rs  types.rs
mello-core/src/stream/: abr.rs  config.rs  error.rs  fec.rs  host.rs  input.rs  manager.rs  mod.rs  pacer.rs  packet.rs  sink.rs  sink_p2p.rs  sink_sfu.rs  viewer.rs
mello-core/src/telemetry/: cs2_gsi.rs  listener.rs  mod.rs
mello-core/src/transport/: mod.rs  sfu_connection.rs
mello-core/src/voice/: mesh.rs  mod.rs
tools/rtp-client-test/: Cargo.toml
tools/rtp-client-test/src/: main.rs
tools/sfu-stream-viewer-probe/: Cargo.toml
tools/sfu-stream-viewer-probe/src/: main.rs
tools/stream-viewer/: Cargo.toml
tools/stream-viewer/src/: main.rs
tools/voice-test-client/: Cargo.toml  README.md
tools/voice-test-client/scenarios/: reconnect.json  smoke.json
tools/voice-test-client/scripts/: fetch_dataset.sh
tools/voice-test-client/src/: headless.rs  inject_loop.rs  main.rs  wav_player.rs
(+118 files in other folders)
