[workspace]
resolver = "2"
members = [
    "client",
    "mello-core",
    "mello-sys",
]

[workspace.package]
version = "0.0.0-DEV"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mollohq/mello"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
