[package]
name = "mello-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mello"
path = "src/main.rs"

[dependencies]
mello-core = { path = "../mello-core" }
slint = { version = "1.5", features = ["renderer-winit-skia"] }
tokio = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
confy = "2.0.0"
uuid = { version = "1", features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
paste = "1"

[features]
default = ["development"]
production = []
development = []

[dev-dependencies]
toml = "0.8"

[build-dependencies]
slint-build = "1.5"
