[package]
name = "mello-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.bundle]
name = "Mello"
identifier = "app.mello.desktop"
icon = ["assets/icons/mello.icns"]
short_description = "Hang out with your crew."
osx_url_schemes = ["mello"]

[[bin]]
name = "mello"
path = "src/main.rs"

[dependencies]
mello-core = { path = "../mello-core" }
slint = { version = "1.5", features = ["renderer-winit-skia"] }
tokio = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
confy = "2.0.0"
uuid = { version = "1", features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
paste = "1"

# Native platform integration
open = "5"
tray-icon = "0.21"
global-hotkey = "0.6"
single-instance = "0.3"
notify-rust = "4"
auto-launch = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.17"
i-slint-backend-winit = { version = "=1.15.1", features = ["renderer-skia"] }

[features]
default = ["development"]
production = []
development = []

[dev-dependencies]
toml = "0.8"
i-slint-backend-testing = "1.5"

[build-dependencies]
slint-build = "1.5"
