[package]
name = "mello-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.bundle]
name = "Mello"
identifier = "app.mello.desktop"
icon = ["assets/icons/mello.ico", "assets/icons/mello.icns"]
short_description = "Hang out with your crew."
osx_url_schemes = ["mello"]

[[bin]]
name = "mello"
path = "src/main.rs"

[dependencies]
mello-core = { path = "../mello-core" }
slint = { version = "1.5", features = ["renderer-winit-skia", "renderer-winit-software"] }
tokio = { workspace = true }
log = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
directories = "5"
confy = "2.0.0"
uuid = { version = "1", features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
paste = "1"

# Auto-updater
velopack = "0.0.1298"
semver = "1"

# Avatar upload, image loading & SVG rasterization
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }
resvg = "0.47"
base64 = "0.22"
reqwest = { workspace = true }
arboard = "3"
rand = "0.8"

# Native platform integration
open = "5"
tray-icon = "0.21"
global-hotkey = "0.6"
single-instance = "0.3"
notify-rust = "4"
auto-launch = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.17"
i-slint-backend-winit = { version = "=1.15.1", features = ["renderer-skia"] }

[features]
default = ["development"]
production = []
development = []

[dev-dependencies]
toml = "0.8"
i-slint-backend-testing = "1.5"

[build-dependencies]
slint-build = "1.5"
winresource = "0.1"
