[package]
name = "mello-core-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

# `lib` (rlib) is added alongside `staticlib` so host examples/tests can call the
# C-ABI directly (e.g. `examples/roundtrip.rs`); `staticlib` is what iOS links.
[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
mello-core = { path = "../mello-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
