[package]
name = "mello-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
mello-sys = { path = "../mello-sys" }
bitflags = "2"
async-trait = "0.1"

# OAuth
tiny_http = "0.12"
webbrowser = "1.0"
urlencoding = "2"
sha2 = "0.10"
rand = "0.8"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
